ui: fix ui shift with header actions

--- a/resources/css/components.css
+++ b/resources/css/components.css
@@ -1,3 +1,14 @@
 @layer components {
     .simple-card { @apply border border-blue-950 p-5 rounded-md }
+
+    .action {
+        @apply
+        bg-gray-800 dark:bg-gray-200
+        text-white dark:text-gray-800
+        font-semibold text-xs
+        px-4 py-2
+        rounded-t-md
+        hover:bg-gray-700 dark:hover:bg-white
+        focus:bg-gray-700 dark:focus:bg-white
+    }
 }
